src/ui/snapshots/work_tui__ui__sidebar__tests__sidebar_empty.snap
---
source: src/ui/sidebar.rs
assertion_line: 471
expression: rendered
---
                                            
  No issue selected
