src/ui/snapshots/work_tui__ui__sidebar__tests__sidebar_with_markdown_link_in_description.snap
---
source: src/ui/sidebar.rs
expression: rendered
---
                                            
  ◦ Snapshot the sidebar render             
                                            
  ── Jira ──────────────────── TEST-123 ──  
  Status    In Progress                     
  Assignee  Casey Dev                       
  Author    Riley Author                    
  Reporter  Jordan QA                       
  Updated   2024-01-01 13:00                
                                            
  Confirm sidebar, list, and command        
  bar layouts.                              
                                            
  ── GitHub ─────────────────────── #42 ──  
  Status    Changes Requested               
  Repo      work-tui                        
  Changes   3 files  +72 / -14              
  Comments  ⠹                               
  Merge     ⠹                               
  Automerge On                              
                                            
  ── CI ─────────────────────────── 1/2 ──  
   ✓ lint  2m                               
   ● build                                  
     ✓ compile  1m                          
     ● integration
