src/ui/snapshots/work_tui__ui__sidebar__tests__sidebar_with_pr.snap
---
source: src/ui/sidebar.rs
expression: rendered
---
                                            
 ◦ TEST-123 Snapshot the sidebar render     
                                            
 ── Jira ────────────────────────────────── 
  Status    ● In Progress                   
  Assignee  Casey Dev                       
  Author    Riley Author                    
  Reporter  Jordan QA                       
                                            
  Confirm sidebar, list, and command        
  bar layouts.                              
                                            
 ── Review ──────────────────────────────── 
  PR        #42 OPEN                        
  Changes   3 files  +72 / -14              
  Comments  ⠹                               
  Review    Changes Requested               
  Merge     ⠹                               
  Automerge On                              
                                            
 ── CI ──────────────────────────────────── 
   ✓ lint  2m                               
   ● build                                  
     ✓ compile  1m                          
     ● integration
